text jump correction

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -5,7 +5,8 @@
   padding-top: 28px;
   padding-bottom: 29px;
   text-align: center;
-  font-family: Roboto, sans-serif;
+  font-family:'Roboto', sans-serif;
+  color: var(--grey-color);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   @media screen and (min-width: 768px) {
     height: 79px;
@@ -26,7 +27,6 @@
   color: var(--grey-color);
   line-height: calc(16 / 14);
   letter-spacing: 0.3em;
-
   @media screen and (min-width: 768px) {
     display: flex;
     justify-content: center;
@@ -61,16 +61,17 @@
   line-height: calc(16 / 14);
   letter-spacing: 0.03em;
   cursor: pointer;
-
+  border-bottom: 1px solid transparent; /* Добавлено */
+  
   &:hover,
   &:focus {
     color: #ff6b08;
     text-decoration: none;
-    border-bottom: 1px solid #070707;
+    border-bottom-color: #070707; /* Изменено */
   }
 
   @media screen and (min-width: 768px) {
-    font-size: 14px;
+    font-size: 16px;
     line-height: calc(19 / 16);
     padding: 0;
   }
